--- a/index.html
+++ b/index.html
@@ -1,13 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spotify API</title>
-    <script src="./dist/index.js"></script>
 </head>
+
 <body>
-    
+    <button class="login" id="login">Login</button>
 </body>
+<script>
+    const successRedirect = decodeURI('http://127.0.0.1:5500/success.html');
+    const authRedirect = `https://accounts.spotify.com/authorize?client_id=d9a8b2f7634d48549a496954be94156f&redirect_uri=${encodeURI(successRedirect)}&response_type=token&scope=user-top-read`
+    document.querySelector('.login').addEventListener('click', () => window.location.replace(authRedirect));
+</script>
+
 </html>
