Show top tracks

--- a/success.html
+++ b/success.html
@@ -7,7 +7,10 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>hi</h1>
+    <h1>Your Top 10 Tracks</h1>
+    <div class="content">
+
+    </div>
 </body>
 <script src="../dist/index.js"></script>
 </html>
