--- a/index.html
+++ b/index.html
@@ -5,11 +5,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Spotify API</title>
+    <link rel="stylesheet" href="./dist/style.css">
+    <title>Your Top Tracks on Spotify</title>
 </head>
 
 <body>
-    <button class="login" id="login">Login</button>
+    <h1>Your top tracks from Spotify</h1>
+    <img src="./assets/spotify-logo.png" alt="Spotify Logo" class="home-logo">
+    <p class="description">Login with your Spotify account and get your personal top tracks</p>
+    <button class="login btn btn__primary btn__primary--rounded" id="login">Login</button>
 </body>
 <script src="../dist/index.js"></script>
 <script>
