--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     <p class="description">Login with your Spotify account and get your personal top tracks</p>
     <button class="login btn btn__primary btn__primary--rounded" id="login">Login</button>
 </body>
-<script src="../dist/index.js"></script>
+<script src="./dist/index.js"></script>
 <script>
-    const successRedirectUrl = decodeURI('http://127.0.0.1:5500/success.html');
+    const successRedirectUrl = decodeURI('https://haod98.github.io/spotify_api/success.html');
     const authRedirect = `https://accounts.spotify.com/authorize?client_id=d9a8b2f7634d48549a496954be94156f&redirect_uri=${encodeURI(successRedirectUrl)}&response_type=token&scope=user-top-read`
     document.querySelector('.login').addEventListener('click', () => window.location.replace(authRedirect));
 </script>
