--- a/success.html
+++ b/success.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,11 +8,17 @@
     <link rel="stylesheet" href="./dist/style.css">
     <title>Document</title>
 </head>
+
 <body>
     <h1>Your Top 10 Tracks</h1>
     <div class="j-contentContainer contentContainer">
 
     </div>
+    <div class="showErrorMsg j-showErrorMsg">
+        <p class="errorMsgTitle">Something went wrong :(</p>
+        <p class="errorMsgContent">Please try again. You will be redirected back to the homepage</p>
+    </div>
 </body>
 <script src="./dist/index.js"></script>
+
 </html>
